--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
     </header>
     <main>
         <section id="welcome-section">
-            <h1>Welcome, My name is Nordine</h1>
-            <h2>A web developer</h2>
+            <div id="presentation">
+                <h1>Welcome, My name is Nordine</h1>
+                <h2>I am a front-web developer</h2>    
+            </div>
         </section>
         <section id="portfolio">
             <h1>These are some of my projects</h1>
