--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <section id="welcome-section">
             <div id="presentation">
                 <h1>Welcome, My name is Nordine</h1>
-                <h2>I am a front-web developer</h2>    
+                <h2>I am a front-end web developer</h2>    
             </div>
         </section>
         <section id="portfolio">
